osh/openstack/14-octavia/manifests/octavia/templates/deployment-api.yaml
---
# Source: octavia/templates/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octavia-api
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: octavia
    application: octavia
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: octavia
      application: octavia
      component: api
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: octavia
        application: octavia
        component: api
      annotations:
        configmap-bin-hash: "a2cfb27c92f4e3c145d9ce2cbc12b159c1fe4f57ffc2620abb234d0a0abc919b"
        configmap-etc-hash: "c94dda96b1ab4c17a23d46a8b9b34d2935fd874ac58238aa53d50dcd4d011f17"
    spec:
      serviceAccountName: octavia-api
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - octavia
                  - key: application
                    operator: In
                    values:
                    - octavia
                  - key: component
                    operator: In
                    values:
                    - api
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: octavia-api
          image: "ghcr.io/cloudnull/genestack/octavia-ovn:master-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            runAsUser: 42424
          command:
            - /tmp/octavia-api.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/octavia-api.sh
                  - stop
          ports:
            - name: o-api
              containerPort: 9876
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 9876
          volumeMounts:
            - name: pod-etc-octavia
              mountPath: /etc/octavia
            - name: octavia-bin
              mountPath: /tmp/octavia-api.sh
              subPath: octavia-api.sh
              readOnly: true
            - name: octavia-etc
              mountPath: /etc/octavia/octavia.conf
              subPath: octavia.conf
              readOnly: true
            - name: octavia-etc
              mountPath: /etc/octavia/logging.conf
              subPath: logging.conf
              readOnly: true
            - mountPath: /var/run/octavia
              name: pod-run-octavia
      volumes:
        - name: pod-etc-octavia
          emptyDir: {}
        - name: octavia-bin
          configMap:
            name: octavia-bin
            defaultMode: 0555
        - name: octavia-etc
          secret:
            secretName: octavia-etc
            defaultMode: 0444
        - emptyDir: {}
          name: pod-run-octavia
