osh/openstack/14-octavia/manifests/octavia/templates/deployment-housekeeping.yaml
---
# Source: octavia/templates/deployment-housekeeping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octavia-housekeeping
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: octavia
    application: octavia
    component: housekeeping
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: octavia
      application: octavia
      component: housekeeping
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: octavia
        application: octavia
        component: housekeeping
      annotations:
        configmap-bin-hash: "a2cfb27c92f4e3c145d9ce2cbc12b159c1fe4f57ffc2620abb234d0a0abc919b"
        configmap-etc-hash: "0b67365553051bde575b7fadfcc91ac612810c9296a49f875b5a9a90f4c7aac1"
    spec:
      serviceAccountName: octavia-housekeeping
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - octavia
                  - key: application
                    operator: In
                    values:
                    - octavia
                  - key: component
                    operator: In
                    values:
                    - housekeeping
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      containers:
        - name: octavia-housekeeping
          image: "ghcr.io/cloudnull/genestack/octavia-ovn:master-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            runAsUser: 42424
          command:
            - /tmp/octavia-housekeeping.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/octavia-housekeeping.sh
                  - stop
          volumeMounts:
            - name: pod-etc-octavia
              mountPath: /etc/octavia
            - name: octavia-bin
              mountPath: /tmp/octavia-housekeeping.sh
              subPath: octavia-housekeeping.sh
              readOnly: true
            - name: octavia-etc
              mountPath: /etc/octavia/octavia.conf
              subPath: octavia.conf
              readOnly: true
            - name: octavia-etc
              mountPath: /etc/octavia/logging.conf
              subPath: logging.conf
              readOnly: true

      volumes:
        - name: pod-etc-octavia
          emptyDir: {}
        - name: octavia-bin
          configMap:
            name: octavia-bin
            defaultMode: 0555
        - name: octavia-etc
          secret:
            secretName: octavia-etc
            defaultMode: 0444
