osh/openstack/14-octavia/manifests/octavia/templates/service-api.yaml
---
# Source: octavia/templates/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: octavia-api
spec:
  ports:
    - name: o-api
      port: 9876
    
  selector:
    release_group: octavia
    application: octavia
    component: api
