osh/openstack/14-octavia/manifests/octavia/templates/ingress-api.yaml
---
# Source: octavia/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octavia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: octavia
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: octavia-api
                port:
                  name: "o-api"
    - host: octavia.openstack
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: octavia-api
                port:
                  name: "o-api"
    - host: octavia.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: octavia-api
                port:
                  name: "o-api"
---
# Source: octavia/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octavia-namespace-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: octavia-api.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: octavia-api
                port:
                  name: "o-api"
---
# Source: octavia/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octavia-cluster-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "rackspace-nginx"
  rules:
    - host: octavia-api.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: octavia-api
                port:
                  name: "o-api"
